# sgntx

./: Makefile  README  README.md
scripts/: comp_enc_vcf_files.bash  encrypt_vcf_files.bash  vcf2bin.py
scripts/ce/: ce.cxx  makefile
src/: Enclave.config.xml  Enclave.edl  Enclave.lds
src/app/: Cargo.toml  build.rs
src/app/.cargo/: config
src/app/src/: main.rs  vcf.rs
src/ce/: Cargo.toml  build.rs
src/ce/src/: aesgcm.c  compress.rs  main.rs
src/enclave/: Cargo.toml  build.rs
src/enclave/src/: chisquare.rs  console.rs  hashmap.rs  imp_hashmap.rs  lib.rs  ocall.rs  spin.rs  types.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
