[package]
name = "enclave"
version = "0.1.0"
authors = ["Thibaud Tortech <thibaud.tortech@cea.fr>", "Sergiu Carpov <sergiu.carpov@cea.fr>"]
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
sgx_alloc   = { path = "/root/sgx/sgx_alloc" }
sgx_types   = { path = "/root/sgx/sgx_types" }
sgx_tstd   =  { path = "/root/sgx/sgx_tstd" }
sgx_tcrypto = { path = "/root/sgx/sgx_tcrypto" }
sgx_trts    = { path = "/root/sgx/sgx_trts" }

shared = { path = "../shared" }

[build-dependencies]
gcc = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

